--- a/services.html
+++ b/services.html
@@ -121,8 +121,9 @@
         </div>
         <div class="service-card">
           <img src="images/road.jpg" alt="Routes">
-          <h2>Routes & Infrastructures</h2>
-          <p>Construire des routes, ponts et infrastructures selon les normes modernes.</p>
+          <h2>vente des briques</h2>
+          <p>Une briqueterie moderne 
+Siège : préfecture de coyah - dans la sous préfecture de Moribaya.</p>
         </div>
         <div class="service-card">
           <img src="images/interior.png" alt="Intérieur">
@@ -193,3 +194,4 @@
   </script>
 </body>
 </html>
+
