--- a/services.html
+++ b/services.html
@@ -122,8 +122,8 @@
         <div class="service-card">
           <img src="images/road.jpg" alt="Routes">
           <h2>vente des briques</h2>
-          <p>Une briqueterie moderne 
-Siège : préfecture de coyah - dans la sous préfecture de Moribaya.</p>
+          <p>- crédit briques : 
+-c’est à dire possibilité de prendre des briques en remboursables chaque ect…</p>
         </div>
         <div class="service-card">
           <img src="images/interior.png" alt="Intérieur">
@@ -194,4 +194,5 @@ Siège : préfecture de coyah - dans la sous préfecture de Moribaya.</p>
   </script>
 </body>
 </html>
+
 
