--- a/services.html
+++ b/services.html
@@ -126,7 +126,7 @@
 -c’est à dire possibilité de prendre des briques en remboursables chaque ect…</p>
         </div>
         <div class="service-card">
-          <img src="images/interior.png" alt="Intérieur">
+          <img src="images/kk.jpeg" alt="Intérieur">
           <h2>Design Intérieur</h2>
           <p>Créer des intérieurs élégants et fonctionnels pour les espaces résidentiels et commerciaux.</p>
         </div>
@@ -194,5 +194,6 @@
   </script>
 </body>
 </html>
+
 
 
