--- a/services.html
+++ b/services.html
@@ -120,13 +120,13 @@
           <p>Usines industrielles et entrepôts conçus pour la performance et la sécurité.</p>
         </div>
         <div class="service-card">
-          <img src="images/road.jpg" alt="Routes">
+          <img src="images/kk.jpeg" alt="Routes">
           <h2>vente des briques</h2>
           <p>- crédit briques : 
 -c’est à dire possibilité de prendre des briques en remboursables chaque ect…</p>
         </div>
         <div class="service-card">
-          <img src="images/kk.jpeg" alt="Intérieur">
+          <img src="images/interior.png" alt="Intérieur">
           <h2>Design Intérieur</h2>
           <p>Créer des intérieurs élégants et fonctionnels pour les espaces résidentiels et commerciaux.</p>
         </div>
@@ -194,6 +194,7 @@
   </script>
 </body>
 </html>
+
 
 
 
